# docpos

./: .gitignore  Cargo.toml  Changelog.md  Readme.md  ToDo.md
.github/workflows/: build.yml  tests.yml
src/: _util_doc.rs  docpos_enum.rs  docpos_fn.rs  docpos_struct.rs  helper.rs  lib.rs  util.rs  util_enum.rs  util_fn.rs  util_strct.rs  util_struct.rs
tests/: smoketest.rs
tests/expansion/: argdocpos_only1a.expanded.rs  argdocpos_only1a.rs  argdocpos_only1b.expanded.rs  argdocpos_only1b.rs  argdocpos_only2a.expanded.rs  argdocpos_only2a.rs  argdocpos_only2b.expanded.rs  argdocpos_only2b.rs  argdocpos_only3a.expanded.rs  argdocpos_only3a.rs  argdocpos_par_gen.rs  argdocpos_with_args_section_and_generics.expanded.rs  argdocpos_with_args_section_and_generics.rs  docpos_enum.expanded.rs  docpos_enum.rs  docpos_enum_sect.expanded.rs  docpos_enum_sect.rs  docpos_fn.expanded.rs  docpos_fn.rs  docpos_fn2.expanded.rs  docpos_fn2.rs  docpos_fn3.expanded.rs  docpos_fn3.rs  docpos_fn_gen.expanded.rs  docpos_fn_gen.rs  docpos_fn_section.expanded.rs  docpos_fn_section.rs  docpos_fn_split.expanded.rs  docpos_fn_split.rs  docpos_fn_split2.expanded.rs  docpos_fn_split2.rs  docpos_fn_split3.expanded.rs  docpos_fn_split3.rs  docpos_struct.expanded.rs  docpos_struct.rs  docpos_struct_sect.expanded.rs  docpos_struct_sect.rs  roxygen_only.expanded.rs  roxygen_only.rs  roxygen_with_args_section_and_generics.expanded.rs  (+5 more)
tests/fail/: duplicate_arguments_section.rs  duplicate_roxygen_attr.rs  no_parameters_documented.rs  wrong_arguments_section_placement.rs  (+2 more)
